# ShiftTestWork

./: .gitignore  Dockerfile  Dockerfile copy  README.md  docker-compose.yaml  loggers.json  main.py  pyproject.toml  requirements.txt
config/: database.py  settings.py
fastapi-app/: .env.template  alembic.ini  loggers.py  main.py
fastapi-app/config/: database.py  settings.py
fastapi-app/migration/: env.py
fastapi-app/src/: models.py  routers.py  schemas.py
fastapi-app/src/handlers/: password.py  user.py
migration/versions/: 37935b69a7ed_add_unique_to_login.py  7063d066a84e_initial_migration.py  ce985d941be1_change_token_table.py
src/: models.py  routers.py  schemas.py
src/handlers/: password.py  token.py  user.py
